# sccompress

./: .gitignore  ARITHMETIC_AND_DELTA_SUMMARY.md  ARITHMETIC_ENCODING_SUMMARY.md  CLUSTER_COMPRESSION.md  COMPRESSION_IDEAS.md  Cargo.toml  DELTA_INDEX_ENCODING.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOSSY.md  OPTIMIZATION_NOTES.md  PHASE2_PLAN.md  TEST_DATA_GUIDE.md  TUTORIAL.md  quadt_reg3.py  quadt_reg4.rs  quadtree4.py  quadtree_mst_stats.csv  seraster.R  test_debug  test_debug.rs
examples/: compare_compression.rs
src/: arith_encode.rs  bits.rs  cluster.rs  costlog.rs  decompress.rs  delta_indices.rs  h5_utils.rs  index_stream.rs  main.rs  matrix_io.rs  mst_codec.rs  sorted_indices.rs  sparse_access.rs  statistics.rs  tree_costlog.rs  types.rs
src/quad_tree/: tree.rs
