[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bincode = "2.0.1"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
ndarray = "0.16.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sux = "0.7.4"
cseq = "0.1.4"
bitm = "0.5.1"
parquet = "55.2.0"
hdf5 = { package = "hdf5-metno", version = "0.10.1" }
sprs = "0.11"
rayon = "1.11.0"
mimalloc = "0.1.48"
sucds = "0.8.3"
petgraph = "0.6"
hnsw_rs = "0.3"

[[bin]]
name = "quadtree"
path = "src/main.rs"

[[bin]]
name = "costlog"
path = "src/costlog.rs"
