[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
anyhow = "1.0"
bincode = "2.0.1"
clap = { version = "4.4", features = ["derive"] }
constriction = "0.4"
csv = "1.3"
flate2 = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.10.1" }
hnsw_rs = "0.3"
linfa = "0.8"
linfa-clustering = "0.8"
mimalloc = "0.1.48"
ndarray = "0.16.1"
parquet = "55.2.0"
petgraph = "0.6"
rayon = "1.11.0"
sprs = "0.11"
stream-vbyte = "0.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "quadtree"
path = "src/main.rs"
